--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "rm -rf dist & rm -rf .parcel-cache & parcel build index.html --no-hmr"
+    "build": "parcel build index.html"
   },
   "author": "Le Vinh Hung",
   "license": "ISC",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "core-js": "^3.18.0",
-    "fractional": "^1.0.0",
+    "fraction.js": "^4.1.1",
     "regenerator-runtime": "^0.13.9"
   }
 }
