--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "core-js": "^3.18.0",
     "fraction.js": "^4.1.1",
+    "package-lock.json": "^1.0.0",
     "regenerator-runtime": "^0.13.9"
   }
 }
